--- a/src/index.css
+++ b/src/index.css
@@ -6,61 +6,59 @@ body{
 }
 
 .upper{
-  @apply w-full p-10 flex flex-wrap gap-6 justify-between ;
-  height: auto;
+  @apply   w-screen p-10  flex gap-10  flex-col flex-wrap  ;
+  height:500px;
 }
 
 .first{
-  @apply pl-5 flex-1 min-w-[200px];
+  @apply flex-col gap-2 w-1/4 pl-5
 }
 
 .head{
-  @apply font-extrabold text-3xl mb-2 md:mb-[250px];
+  @apply  font-extrabold text-3xl mb-[250px];
   color:#E0ECDE;
 }
 
 .tail{
-  @apply text-base text-[15px] leading-[150%] mb-2;
+  @apply text-base text-[15px] leading-[150%];
   color:#F4FBF3;
   opacity:0.7;
 }
 
-.icons{
-  @apply flex flex-row gap-2 mt-2 items-center;
-}
-
 .second,.third,.fourth{
-  @apply flex flex-col pl-4 flex-1 min-w-[200px];
+  @apply  w-1/4  pl-15
 }
 
 .topic{
-  @apply font-semibold leading-[150%] text-[18px] mb-8;
+  @apply font-semibold leading-[150%]  text-[18px] mb-8;
   color:#F4FBF3;
   opacity:0.9;
 }
 
 .under{
-  @apply text-base text-[16px] leading-[150%] flex flex-col space-y-4;
+  @apply text-base text-[16px] leading-[150%] flex flex-col space-y-4 ;
   color:#F4FBF3;
   opacity:0.7;
 }
 
 .stunderline {
-  box-shadow:
-    0 -2px 4px -1px rgba(0, 0, 0, 0.5),
-    0 -1px 2px rgba(255, 255, 255, 0.15);
+box-shadow: 
+    0 -2px 4px -1px rgba(0, 0, 0, 0.5),     
+    0 -1px 2px rgba(255, 255, 255, 0.15);    
 }
+
 
 .lower{
-  @apply text-base p-10 w-full;
-  color:#F4FBF3;
-  opacity:0.7;
-}
+  @apply text-base p-10 w-full ;
+   color:#F4FBF3;
+   opacity:0.7;
+   
 
+}
 .fir{
-  @apply flex flex-col md:flex-row gap-5 justify-between mb-10;
+  @apply flex gap-5 justify-between mb-10
 }
 
 .list{
-  @apply flex flex-col md:flex-row justify-between items-start md:items-center gap-3 md:gap-5;
+  @apply flex justify-between items-center gap-5;
 }
