--- a/src/index.css
+++ b/src/index.css
@@ -1,48 +1,49 @@
 @import "tailwindcss";
 
-body{
+body {
   font-family: 'Epilogue', sans-serif;
-  background-color: #160828;
+  margin: 0;
+  padding: 0;
+  background-color: white;
 }
 
-.upper{
-  @apply w-full p-10 flex flex-wrap gap-6 justify-between ;
-  height: auto;
+.upper {
+  @apply w-full py-10 px-5 flex flex-wrap gap-6 justify-between;
 }
 
-.first{
+.first {
   @apply pl-5 flex-1 min-w-[200px];
 }
 
-.head{
+.head {
   @apply font-extrabold text-3xl mb-2 md:mb-[250px];
-  color:#E0ECDE;
+  color: #E0ECDE;
 }
 
-.tail{
+.tail {
   @apply text-base text-[15px] leading-[150%] mb-2;
-  color:#F4FBF3;
-  opacity:0.7;
+  color: #F4FBF3;
+  opacity: 0.7;
 }
 
-.icons{
-  @apply flex flex-row gap-2 mt-2 items-center;
+.icons {
+  @apply flex flex-row gap-1 mt-2 items-center;
 }
 
-.second,.third,.fourth{
+.second, .third, .fourth {
   @apply flex flex-col pl-4 flex-1 min-w-[200px];
 }
 
-.topic{
+.topic {
   @apply font-semibold leading-[150%] text-[18px] mb-8;
-  color:#F4FBF3;
-  opacity:0.9;
+  color: #F4FBF3;
+  opacity: 0.9;
 }
 
-.under{
+.under {
   @apply text-base text-[16px] leading-[150%] flex flex-col space-y-4;
-  color:#F4FBF3;
-  opacity:0.7;
+  color: #F4FBF3;
+  opacity: 0.7;
 }
 
 .stunderline {
@@ -51,16 +52,16 @@ body{
     0 -1px 2px rgba(255, 255, 255, 0.15);
 }
 
-.lower{
-  @apply text-base p-10 w-full;
-  color:#F4FBF3;
-  opacity:0.7;
+.lower {
+  @apply text-base p-5 w-full;
+  color: #F4FBF3;
+  opacity: 0.7;
 }
 
-.fir{
-  @apply flex flex-col md:flex-row gap-5 justify-between mb-10;
+.fir {
+  @apply flex flex-col md:flex-row gap-5 justify-between mb-6;
 }
 
-.list{
+.list {
   @apply flex flex-col md:flex-row justify-between items-start md:items-center gap-3 md:gap-5;
 }
